# jslog-uploader

./: .gitignore  CApplication.cpp  CApplication.h  CLog.cpp  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
include/: CLog.h
